Fix Railway deployment: Make better-sqlite3 optional, recommend PostgreSQL
Railway deployment was failing due to better-sqlite3 native module compilation issues.

Changes:
- Move better-sqlite3 to optionalDependencies
- Add graceful fallback if better-sqlite3 fails to load
- Add nixpacks.toml for proper native module compilation
- Add postinstall script to rebuild better-sqlite3
- Update .env.example to recommend PostgreSQL for Railway
- Add clear error messages when SQLite is unavailable

DEPLOYMENT INSTRUCTIONS:
1. Deploy to Railway from GitHub
2. Add PostgreSQL service in Railway dashboard
3. Set environment variables:
   - DATABASE_TYPE=postgres
   - JWT_SECRET=(generate random string)
   - NODE_ENV=production
4. Railway auto-sets DATABASE_URL when PostgreSQL is added

SQLite will work for local development, PostgreSQL for production.

--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,16 @@ PORT=8080
 NODE_ENV=development
 
 # Database Configuration
-# Choose: "sqlite" (default) or "postgres" (for Railway)
+# IMPORTANT: Use "postgres" for Railway deployment (SQLite may have native module issues)
+# Use "sqlite" only for local development
 DATABASE_TYPE=sqlite
 
-# SQLite (local development)
+# SQLite (local development only)
 DATABASE_PATH=./server/nexus.db
 
-# PostgreSQL (Railway production)
+# PostgreSQL (RECOMMENDED for Railway production)
 # When DATABASE_TYPE=postgres, Railway automatically sets DATABASE_URL
+# Add a PostgreSQL service in Railway and set DATABASE_TYPE=postgres
 # DATABASE_URL=postgresql://user:pass@host:5432/nexus
 
 # Authentication
