--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "node server/index.js"
+    "dev": "node server/index.js",
+    "postinstall": "npm rebuild better-sqlite3 --build-from-source || true"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -14,7 +15,6 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.6.2",
     "compression": "^1.8.0",
     "cors": "^2.8.6",
     "dotenv": "^16.4.7",
@@ -26,5 +26,8 @@
     "pg": "^8.13.3",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
+  },
+  "optionalDependencies": {
+    "better-sqlite3": "^12.6.2"
   }
 }
