Add diagnostic script to debug Railway deployment
The Node.js process is crashing silently with no logs.
This diagnostic script will:
- Show environment variables
- Test all module loads
- Identify which module is failing
- Run before the main server starts

This will help us see exactly what's failing in Railway's environment.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,5 @@ cmds = ["npm ci"]
 cmds = ["npm rebuild better-sqlite3 --build-from-source"]
 
 [start]
-cmd = "node server/index.js"
+# Run diagnostic first to see what's failing, then start the server
+cmd = "node server/diagnose.js && node server/index.js"
