CRITICAL FIX: Fix Railway start command and port configuration
Issues found:
1. railway.toml startCommand was overriding nixpacks diagnostic
2. Hardcoded internal_port=8080 conflicting with Railway's PORT
3. Diagnostic script wasn't being executed

Fixes:
- Remove [[services]] block with hardcoded port
- Set startCommand to run diagnostic first
- Increase healthcheck timeout to 120s
- Enhanced diagnostic script with more checks
- Diagnostic now checks env vars, files, and all modules

This should finally show us what's failing in Railway.

--- a/railway.toml
+++ b/railway.toml
@@ -2,13 +2,8 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "node server/index.js"
+startCommand = "node server/diagnose.js && node server/index.js"
 healthcheckPath = "/api/health"
-healthcheckTimeout = 30
+healthcheckTimeout = 120
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 5
-
-[[services]]
-service_type = "web"
-protocol = "tcp"
-internal_port = 8080
