Remove startCommand from railway.toml to let nixpacks handle start
Railway's startCommand in railway.toml was overriding nixpacks start command.
Now nixpacks.toml fully controls the start command with diagnostic first.

This should finally execute: node server/diagnose.js && node server/index.js

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,3 +6,6 @@ cmds = ["npm ci"]
 
 [phases.build]
 cmds = ["npm rebuild better-sqlite3 --build-from-source"]
+
+[start]
+cmd = "node server/diagnose.js && node server/index.js"
