Add ultra-simple stdout test to verify Railway captures output
Node.js is starting but producing zero output. This test will:
1. Write to stdout/stderr immediately
2. Exit immediately
3. Show if Railway is capturing output at all

If we see 'TEST OUTPUT' in logs, stdout works.
If not, Railway has a logging/capture issue.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["npm ci"]
 cmds = ["npm rebuild better-sqlite3 --build-from-source"]
 
 [start]
-cmd = "node server/diagnose.js && node server/index.js"
+cmd = "node test-output.js || echo 'Test failed' && node server/diagnose.js && node server/index.js"
