--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["npm ci"]
 cmds = ["npm rebuild better-sqlite3 --build-from-source"]
 
 [start]
-cmd = "node simple-server.js"
+cmd = "node server/index.js"
