--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "multer": "^2.0.2",
     "pg": "^8.13.3",
     "socket.io": "^4.8.3",
-    "uuid": "^13.0.0"
+    "uuid": "9.0.1"
   },
   "optionalDependencies": {
     "better-sqlite3": "^12.6.2"
