--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs_20", "python3", "gcc", "gnumake"]
 cmds = ["npm ci"]
 
 [phases.build]
-cmds = ["npm rebuild better-sqlite3 --build-from-source"]
+cmds = ["npm rebuild better-sqlite3 --build-from-source || true"]
 
 [start]
 cmd = "node server/index.js"
