--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -1,10 +1,15 @@
-name: Build Desktop App
+name: Build & Release Desktop App
 
 on:
   push:
     tags:
       - 'v*'
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version tag to create (e.g. v3.4.0). Leave empty to build without release.'
+        required: false
+        default: ''
 
 jobs:
   build-windows:
@@ -28,18 +33,15 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Setup Installer
+      - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: NexusChat-Windows-Setup
-          path: desktop/dist/NexusChat-Setup-*.exe
-          retention-days: 30
-
-      - name: Upload Portable exe
-        uses: actions/upload-artifact@v4
-        with:
-          name: NexusChat-Windows-Portable
-          path: desktop/dist/NexusChat-Portable-*.exe
+          name: windows-artifacts
+          path: |
+            desktop/dist/NexusChat-Setup-*.exe
+            desktop/dist/*.yml
+            desktop/dist/*.yaml
+            desktop/dist/*.blockmap
           retention-days: 30
 
   build-mac:
@@ -63,11 +65,16 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload macOS DMG
+      - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: NexusChat-macOS
-          path: desktop/dist/*.dmg
+          name: macos-artifacts
+          path: |
+            desktop/dist/*.dmg
+            desktop/dist/*.zip
+            desktop/dist/*.yml
+            desktop/dist/*.yaml
+            desktop/dist/*.blockmap
           retention-days: 30
 
   build-linux:
@@ -85,25 +92,27 @@ jobs:
         working-directory: desktop
         run: npm ci
 
-      - name: Build Linux AppImage
+      - name: Build Linux packages
         working-directory: desktop
         run: npm run build:linux
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Linux AppImage
+      - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: NexusChat-Linux
+          name: linux-artifacts
           path: |
             desktop/dist/*.AppImage
             desktop/dist/*.deb
+            desktop/dist/*.yml
+            desktop/dist/*.yaml
           retention-days: 30
 
   release:
     needs: [build-windows, build-mac, build-linux]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.version != '')
     permissions:
       contents: write
     steps:
@@ -112,12 +121,49 @@ jobs:
         with:
           path: artifacts
 
+      - name: List artifacts
+        run: find artifacts -type f | head -50
+
+      - name: Determine version tag
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "tag=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*
-          generate_release_notes: true
+          tag_name: ${{ steps.version.outputs.tag }}
+          name: "Nexus Chat ${{ steps.version.outputs.tag }}"
+          body: |
+            ## 🚀 Nexus Chat ${{ steps.version.outputs.tag }}
+            
+            ### Auto-Update
+            If you already have Nexus Chat installed, it will **automatically update** when you launch it. No need to download again!
+            
+            ### Fresh Install
+            | Platform | Download |
+            |----------|----------|
+            | Windows  | `NexusChat-Setup-*.exe` |
+            | macOS    | `*.dmg` |
+            | Linux    | `*.AppImage` or `*.deb` |
+            
+            ### What's New
+            See commit history for detailed changes.
+          files: |
+            artifacts/**/*.exe
+            artifacts/**/*.dmg
+            artifacts/**/*.zip
+            artifacts/**/*.AppImage
+            artifacts/**/*.deb
+            artifacts/**/*.yml
+            artifacts/**/*.yaml
+            artifacts/**/*.blockmap
           draft: false
           prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
