Fix critical bugs: timestamps, messaging, database, and UI
Critical Fixes:
- Add ensureDate() wrapper for timestamp handling (ISO strings from backend)
- Fix timeDiff NaN calculation in renderMessages
- Fix offlineUsers → offlineMembers variable name mismatch
- Add scrollToBottom() function definition
- Rewrite createServer() to use backend API instead of local-only
- Fix uuid version to 9.0.1 (CommonJS compatible)

Major Fixes:
- Fix sendMessage() to call backend API instead of creating local duplicates
- Fix reactions (toggleReaction/addQuickReaction) to use backend API
- Remove random unread dots (Math.random > 0.7)
- Replace all u-self references with real backend user ID (currentUser.id)
- Fix startCall() userId extraction for backend UUIDs
- Remove fake call simulation (auto-answer, speaking simulation, random incoming)
- Fix file upload to send via backend
- Fix emoji filter to actually search by name
- Replace alert() stubs with toast notifications

Moderate Fixes:
- Add DM sending handler to showUserPopup message input
- Register currentUser in users map on login for message rendering

Database:
- Auto-detect PostgreSQL when DATABASE_URL/POSTGRES_* env vars present
- Set DATABASE_TYPE=postgres in railway.toml for Railway deployment
- Move better-sqlite3 to optionalDependencies
- Add pg to server/package.json dependencies
- Clean up unnecessary better-sqlite3 require in messages.js

--- a/railway.toml
+++ b/railway.toml
@@ -6,3 +6,6 @@ healthcheckPath = "/api/health"
 healthcheckTimeout = 120
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 5
+
+[variables]
+DATABASE_TYPE = "postgres"
