--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "node server/index.js",
-    "postinstall": "npm rebuild better-sqlite3 --build-from-source || true"
+    "postinstall": "if [ &quot;$DATABASE_TYPE&quot; != &quot;postgres&quot; ]; then npm rebuild better-sqlite3 --build-from-source || true; fi"
   },
   "engines": {
     "node": ">=18.0.0"
