Fix Electron desktop app overlay and backend integration
main.js:
- Add startServer() function to spawn backend server subprocess
- Change main window to load from http://localhost:8090 instead of file://
- Add 2s delay for server startup before creating windows
- Change overlay to load from /overlay.html via server
- Stop server on app quit
- Add webSecurity: false to overlay for localhost access

overlay.js:
- Add API helper functions to call backend API
- Add loadUserData() to fetch user and active channel from backend
- Add loadFriends() to fetch friends from backend
- Add loadMessages() to fetch messages from backend
- Fix sendMessage() to use backend API instead of local array
- Update renderMessages() to handle backend message format
- Add scrollToBottom() helper function
- Update message timestamp handling to use createdAt/created_at

package.json:
- Change main from server/index.js to main.js for Electron
- Add start, start-server, dev-server scripts
- Add electron dependency

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "nexus-chat",
   "version": "3.3.0",
   "description": "Nexus Chat — Real-time communication platform with backend API",
-  "main": "server/index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "node server/index.js",
+    "start": "electron .",
+    "start-server": "node server/index.js",
+    "dev-server": "node server/index.js",
+    "dev": "npm run start-server & npm run electron",
     "postinstall": "if [ &quot;$DATABASE_TYPE&quot; != &quot;postgres&quot; ]; then npm rebuild better-sqlite3 --build-from-source || true; fi"
   },
   "engines": {
@@ -29,5 +31,8 @@
   },
   "optionalDependencies": {
     "better-sqlite3": "^12.6.2"
+  },
+  "devDependencies": {
+    "electron": "^40.4.1"
   }
 }
